# dpsim

./: .clang-format  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.webdoc  Doxyfile.REMOVED.git-id  Issues  LICENSE  README.md  THIRD-PARTY.md  Untitled.ipynb  Untitled2.ipynb  apt.txt  environment.yml  flake.nix  index.html  index.xml  offline-search-index.080d19692ecf5913bc7751d3f18b9c2a.json  offline-search-index.093770434b348358f99c7fae4309d59b.json  offline-search-index.0cd67cacbd48fc58e6a72f14fb68c91d.json  offline-search-index.150b1df3223190cac5d3745fec7c6b27.json  offline-search-index.20bec4fc8d7bd25b988b7b11133bb6fb.json  offline-search-index.23f9584888f879f63f0112ed7acaefa1.json  offline-search-index.31f486977b610cddaaea15472137aabf.json  offline-search-index.3661daae1b1e2d80ac1802c1fa4ed54f.json  offline-search-index.3931a58e2d816b4ef2d701b19a844087.json  offline-search-index.3939f0d334ac8a1f51f1b81f8007e04e.json  offline-search-index.3d5bf292b45e6fc9b94ed7f723369381.json  offline-search-index.4f0f351f44a71f52446d691d93069fd2.json  (+36 more)
Dependencies/libcps/: CMakeLists.txt  COPYING.md  README.md
Documentation/: .gitignore  Build.rst  CMakeLists.txt  Copying.rst  Cpp.rst  DPsimDoc.bbl  DPsimDoc.blg  DPsimDoc.tex  Development.rst  DoxyMain.md  Doxyfile.REMOVED.git-id  Doxyfile.in  Doxyfile.in.REMOVED.git-id  Examples.rst  Figures  Guide.rst  Index.rst  Install.rst  Main.md  Makefile  Notebooks  Notebooks.rst  Python.rst  Real-time.rst  Reference.rst  Roadmap.md  Shmem.md  Structure.md  VILLAS.md  about.rst  build.rst  conf.py  conf.py.in  index.rst  main-doc-cpp.md  make.bat  module.rst  reference.rst  todo.rst
Documentation/Notebooks/: CMakeLists.txt  DP_Basics.ipynb.REMOVED.git-id  DP_EMT_Comparison.ipynb  DPsimPlots.ipynb.REMOVED.git-id  Examples.ipynb.REMOVED.git-id  Graphviz.ipynb  Live Plotting.ipynb.REMOVED.git-id  Quickstart Guide.ipynb  Quickstart Guide.ipynb.REMOVED.git-id
Documentation/content/: nodal_analysis.tex  simulator_models.dvi  simulator_models.tex
Documentation/img/: Capacitor.emf  stator and rotor circuits.svg.REMOVED.git-id
Documentation/latex/: .gitignore  DPsimDoc.tex  Makefile  bibliography.bib
Examples/C++/: .gitignore  CIMTest.cpp  CIMTest.h  CMakeLists.txt  DPsimExample.cpp  DPsimExampleCIM.cpp  DPsimMain.cpp  PythonTest.cpp  PythonTest.h  ReferenceCircuits.cpp  ReferenceCircuits.h  ShmemTest.cpp  ShmemTest.h  SimpleCircuitTest.cpp  SimpleCircuitTest.h  SyncGenUnitTestVBR.cpp  SyncGenUnitTestVBR.h  SynchronGenUnitTest.cpp  SynchronGenUnitTest.h
Examples/Cxx/: CIM.cpp  CMakeLists.txt  Examples.h  test_Circuits.yml  test_RealTime.yml  test_Shmem.yml
Source/: .gitignore  Attribute.cpp  Attribute.h  CIMReader.cpp  CIMReader.h  CMakeLists.txt  Component.cpp  Component.h  Components.h  Config.h.in  DAESimulation.cpp  DAESimulation.h  DAESolver.cpp  DPSolverMain.cpp  DPsim.h  DPsimMain.cpp  DPsim_MNA.h  DataLogger.cpp  Definitions.h  DiakopticsSolver.cpp  Event.cpp  ExternalInterface.cpp  ExternalInterface.h  FaultSimulation.cpp  FaultSimulation.h  GeneratorTestSimulation.cpp  GeneratorTestSimulation.h  GeneratorVBRSimulation.cpp  GeneratorVBRSimulation.h  IntegrationMethod.cpp  IntegrationMethod.h  Interface.cpp  InterfaceShmem.cpp  LinearDPSim.cpp  LinearDPSim.h  Log.cpp  Log.h  Logger.cpp  Logger.h  LoggerFactory.h  (+72 more)
Source/CIM/: CIMReader.cpp  CIMReader.h  Reader.cpp  Reader.h
Source/Components/: Base.cpp  Base.h  BaseComponent.cpp  BaseComponent.h  Base_ControllableSource.h  Base_CurrentSource.h  Base_ExportableCurrent.h  Base_SynchronGenerator.cpp  Base_SynchronGenerator.h  Base_VoltageSource.h  Capacitor.cpp  Capacitor.h  CapacitorDP.cpp  CapacitorDP.h  CircuitElement.h  Common_Line.h  Common_SynchronGenerator.h  ComponentCommons.h  CurrentSource.cpp  CurrentSource.h  CurrentSourceDP.cpp  CurrentSourceDP.h  CurrentSource_Base.h  DP_Capacitor.cpp  DP_Capacitor.h  DP_CurrentSource.cpp  DP_CurrentSource.h  DP_CurrentSource_Ideal.cpp  DP_CurrentSource_Ideal.h  DP_Inductor.cpp  DP_Inductor.h  DP_Inductor_Interfaced.cpp  DP_Inductor_Interfaced.h  DP_Line_Pi.cpp  DP_Line_Pi.h  DP_Line_Rx.cpp  DP_Line_Rx.h  DP_Load_PQ.cpp  DP_Load_PQ.h  DP_Resistor.cpp  (+154 more)
Source/Deprecated/: AcsMatrix.cpp  AcsMatrix.h  LU.h  SimpleString.h  VectorJI.h  mylibrary.h
Source/Examples/: ReferenceCircuits.cpp  ReferenceCircuits.h  ShmemTest.cpp  ShmemTest.h  SimpleCircuitTest.cpp  SimpleCircuitTest.h  SimpleCircuitUnitTest.cpp  SimpleCircuitUnitTest.h  SyncGenUnitTestVBR.cpp  SyncGenUnitTestVBR.h  SynchronGenUnitTest.cpp  SynchronGenUnitTest.h  TestSequenceICCEP.h  Testing.h  VillasTest.cpp  VillasTest.h  pyExamples.py  shmem1.py  shmem2.py
Source/Python/: CMakeLists.txt  Component.cpp  Component.h  EventChannel.cpp  Interface.cpp  Interface.h  LoadCim.cpp  LoadCim.h  Logger.cpp  Module.cpp  Module.h  Node.cpp  Simulation.cpp  Simulation.h  SystemTopology.cpp  SystemTopology.h  Utils.cpp
Source/Tests/: TestSimple.cpp  run_tests.py
Source/Villas/: InterfaceSampleBased.cpp  InterfaceShmem.cpp  InterfaceVillas.cpp  pybind-dpsim-villas.cpp
Source/pybind/: Attributes.cpp  BaseComponents.cpp  CMakeLists.txt  DPComponents.cpp  EMTComponents.cpp  SPComponents.cpp  SignalComponents.cpp  Utils.cpp  main.cpp
Source/villas/: InterfaceSampleBased.cpp  InterfaceShmem.cpp  InterfaceVillas.cpp  pybind-dpsim-villas.cpp
Tests/: CMakeLists.txt  Timer.cpp
binder/: apt.txt  environment.yml  setup.cfg  setup.py
docs/doxygen/: CMakeLists.txt  DoxyMain.md  Doxyfile.in
docs/sphinx/: CMakeLists.txt  Reference.rst  about.rst  conf.py.in
dpsim/: CMakeLists.txt
dpsim-models/: CMakeLists.txt
dpsim-models/src/: Attribute.cpp  CMakeLists.txt  CSVReader.cpp  CompositePowerComp.cpp  DataLogger.cpp  Graph.cpp  Logger.cpp  MNASimPowerComp.cpp  MNAStampUtils.cpp  MathUtils.cpp  SimNode.cpp  SimPowerComp.cpp  SystemTopology.cpp  (+2 more)
dpsim-villas/: CMakeLists.txt
models/: CMakeLists.txt
(+7559 files in other folders)
