[build-system]
requires = ["setuptools>=42", "pytest-runner", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpsim"
version = "1.1.1"
description = "Dynamic real-time power system simulator"
readme =  {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "The DPsim Authors", email = "markus.mirz@rwth-aachen.de"},
]
requires-python = ">=3.8"
keywords = ["simulation", "energy"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

dependencies = [
    "pybind11[global]",

    "villas-dataprocessing >= 0.2.6",
    "villas-node",

    "paho-mqtt == 1.1",
]

[project.urls]
Homepage = "https://sogno.energy/dpsim/"
Documentation = "https://sogno.energy/dpsim/docs/"
Repository = "https://github.com/sogno-platform/dpsim"
Issues = "https://github.com/sogno-platform/dpsim/issues"

[project.optional-dependencies]
manylinux = [
    "pybind11[global]",
]

docs = [
    "sphinx",
    "sphinx_rtd_theme",
]

test = [
    "pytest",
    "pyyaml",
    "nbformat",
    "nbconvert"
]

[tool.setuptools]
package-dir = {"dpsim" = "python/src/dpsim"}

[tool.setuptools.packages.find]
where = ["python/src"]
namespaces = false

[tool.cibuildwheel]
build-verbosity = "3"
build="[cp]p3{8,9,10,11}-manylinux_x86_64"
manylinux-x86_64-image = "sogno/dpsim:manylinux"
manylinux-pypy_x86_64-image = "sogno/dpsim:manylinux"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
